<resources>
    <string name="app_name">Vignan Vikas2</string>
    <string name="add_notice">Upload Notice</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="upload_books">Upload Books</string>
    <string name="update_attendence">Upolad Attendance</string>
    <string name="upload_assignment">Upload Assignment</string>
    <string name="update_performance">Upload Performance</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="vits_logo">Vignan Vikas (Admin)</string>
    <string name="select_notice">Select Notice</string>>
    <string name="adminUserName">User Name</string>
    <string name="uploadAttendence">Upload Attendance</string>
    <string name="select_file">Attendance file title</string>
    <string name="uploadNotes">Upload Notes</string>>
    <string name="enterfaculty">Enter faculty name</string>
    <string name="addNotes">Upload Notes</string>
    <string name="notes_title">Enter the title</string>
    <string name="upload_Csv_Attendance">1.Upload attendance csv file and convert to Json</string>
    <string name="uploadJsonAttendance">2.Upload attendance json file and import to Firebase</string>
    <string name="upload_Csv_Performance">1.Upload performance csv file and convert to Json</string>
    <string name="uploadJsonPerformance">2.Upload performance json file and import to Firebase</string>
</resources>