<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:background="@mipmap/ic_vitslogo1"
                android:padding="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="30dp"
                android:text="@string/vits_logo"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_margin="5dp"
        android:background="@mipmap/ic_vignan_campus_foreground"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/update_performance"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:layout_margin="5dp"
        android:gravity="left"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convertCsvToJson"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightPink"
            android:text="@string/upload_Csv_Performance"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigateFirebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/uploadJsonPerformance"
            android:textAllCaps="false" />
    </LinearLayout>>
</LinearLayout>