<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadNotice"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:background="@mipmap/ic_vitslogo1"
                android:padding="0dp" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:padding="30dp"
                android:text="@string/vits_logo"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="68dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_account"
                android:padding="-4dp" />

            <ImageView
                android:layout_width="19dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_expand"
                android:layout_marginTop="40dp"
                android:padding="-10dp" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/uploadNotice">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_yellow"
                    android:padding="15dp"
                    android:src="@drawable/ic_addnotice"
                    android:layout_gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/select_notice"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noticeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_notice"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:id="@+id/uploadNoticeButton"
        />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="4000dp"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/noticeImageView"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    </LinearLayout>
</ScrollView>